2009-07-31  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Tor Arne Vestbø.

        Expose the Offline Web Application Cache in the Qt API.

        * Api/qwebsettings.cpp:
        (QWebSettings::QWebSettings):
        (QWebSettings::setOfflineWebApplicationCachePath):
        (QWebSettings::offlineWebApplicationCachePath):
        (QWebSettings::setOfflineWebApplicationCacheQuota):
        (QWebSettings::offlineWebApplicationCacheQuota):
        * Api/qwebsettings.h:

2009-07-30  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Adam Treat.

        Add missing Q_OBJECT to class inheriting from QObject.

        * tests/qwebframe/tst_qwebframe.cpp:

2009-07-30  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Adam Treat.

        Fix indentation.

        * tests/qwebframe/tst_qwebframe.cpp:

2009-07-30  Volker Hilsheimer <volker.hilsheimer@nokia.com>

        Reviewed by Simon Hausmann.

        Fix documentation links to examples.

        * Api/qwebview.cpp:

2009-07-30  Balazs Kelemen  <kelemen.balazs.3@stud.u-szeged.hu>

        Reviewed by Simon Hausmann.

        Allocate MainWindow on heap in robotized QtLauncher as well.

        * QtLauncher/main.cpp:
        (main):

2009-07-29  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Darin Adler.

        Added foundation work to allow a testing infrastructure for the Web
        Inspector.

        * WebCoreSupport/InspectorClientQt.cpp:
        (WebCore::InspectorClientQt::inspectorWindowObjectCleared):
        * WebCoreSupport/InspectorClientQt.h:

2009-07-29  Zoltan Herczeg  <zherczeg@inf.u-szeged.hu>

        Reviewed by Simon Hausmann.

        [Qt] In debug mode, this fix frees cached resources
        and other unreferenced objects (by calling the
        garbage collector) to remove the LEAK messages.
        https://bugs.webkit.org/show_bug.cgi?id=27767

        * Api/qwebframe.cpp:
        (qt_drt_cache_clear):